--- a/index.html
+++ b/index.html
@@ -3,189 +3,242 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Google Maps + GeoJSON + WMS - Simple</title>
+  <title>MalukuInfraZone - Final (UMD)</title>
+
+  <!-- gunakan styles.css lokal -->
+  <link rel="stylesheet" href="styles.css">
+
   <style>
-    html,body{height:100%;margin:0;font-family:Arial,Helvetica,sans-serif}
-    #map{height:100vh;width:100%}
-    #panel{position:absolute;left:10px;top:10px;background:#fff;padding:8px;border-radius:6px;box-shadow:0 2px 6px rgba(0,0,0,.2);z-index:5}
-    .btn{display:inline-block;padding:6px 10px;margin:4px 0;border:1px solid #888;border-radius:4px;cursor:pointer;background:#f7f7f7}
-    .info{font-size:13px}
+    /* minimal fallback style jika styles.css belum memuat */
+    body{ margin:0; font-family: Arial, Helvetica, sans-serif; background:#0b1220; color:#fff; }
+    #map{ width:100%; height:70vh; min-height:480px; border-radius:8px; box-shadow:0 8px 30px rgba(0,0,0,0.5); }
+    .filter-section{ position:fixed; right:18px; bottom:18px; width:300px; background:rgba(6,8,15,0.9); padding:12px; border-radius:10px; z-index:1200; }
+    .filter-section select, .filter-section button{ width:100%; margin-top:8px; padding:8px; border-radius:6px; background:transparent; color:#fff; border:1px solid rgba(255,255,255,0.06); }
+    #errorMessage{ position:fixed; left:50%; transform:translateX(-50%); top:12px; background:rgba(185,28,28,0.12); color:#fecaca; padding:8px 12px; border-radius:8px; display:none; z-index:1300; }
+    #loading{ position:fixed; left:50%; top:50%; transform:translate(-50%,-50%); background:rgba(0,0,0,0.6); padding:8px 12px; border-radius:8px; display:none; z-index:1300; }
   </style>
-  <!-- Ganti YOUR_API_KEY dengan API key Google Maps Anda. Aktifkan Maps JavaScript API. -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0"></script>
 </head>
 <body>
-  <div id="panel">
-    <div style="font-weight:600;margin-bottom:6px">Peta Infrastruktur - Demo</div>
-    <div class="btn" id="loadGeojson">Load GeoJSON</div>
-    <div class="btn" id="toggleWMS">Toggle WMS</div>
-    <div class="info" id="status"></div>
+  <div id="errorMessage"></div>
+  <div id="loading">Memuat peta dan data...</div>
+
+  <header style="padding:12px 18px;display:flex;justify-content:space-between;align-items:center">
+    <div style="display:flex;gap:10px;align-items:center">
+      <img src="https://cdn-icons-png.flaticon.com/512/854/854878.png" alt="logo" style="width:36px;height:36px">
+      <h1 style="font-size:20px;margin:0">Maluku InfraZone</h1>
+    </div>
+    <div style="color:#9ca3af;font-size:13px">BPBPK Maluku</div>
+  </header>
+
+  <main style="padding:18px">
+    <h2 style="margin:0 0 12px 0">Peta Infrastruktur</h2>
+    <div id="map"></div>
+  </main>
+
+  <div class="filter-section" id="filterSection" aria-hidden="false">
+    <label style="font-size:13px;color:#9ca3af">Sektor</label>
+    <select id="sectorFilter"><option value="">Semua Sektor</option></select>
+
+    <label style="font-size:13px;color:#9ca3af;margin-top:8px">Tahun</label>
+    <select id="yearFilter"><option value="">Semua Tahun</option></select>
+
+    <button id="applyBtn" style="margin-top:10px;background:#2563eb;border:none;color:#fff">Terapkan</button>
+    <button id="resetBtn" style="margin-top:8px;background:#374151;border:none;color:#fff">Reset</button>
+
+    <div id="filterInfo" style="font-size:12px;color:#9ca3af;margin-top:8px">Menampilkan 0 titik</div>
   </div>
-  <div id="map"></div>
+
+  <!-- MarkerClusterer UMD (global MarkerClusterer) -->
+  <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+
+  <!-- Google Maps API (callback initMap). Ganti YOUR_API_KEY -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0&callback=initMap" async defer></script>
 
   <script>
-    // Konfigurasi
-    const GEOJSON_URL = 'https://github.com/bpbpkmaluku/Peta-Infrastruktur/blob/main/DATA_SPASIAL.geojson'; // Ganti dengan path raw GitHub Anda jika perlu
-    const WMS_BASE = 'https://demo.mapserver.org/cgi-bin/wms'; // Contoh WMS
+    // Utility
+    function escapeHtml(s){ return String(s||'').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+    const elError = document.getElementById('errorMessage');
+    const elLoading = document.getElementById('loading');
 
-    let map;
-    let wmsTileLayer = null;
-    const markers = [];
-    const infoWindow = new google.maps.InfoWindow();
+    function showError(msg){ elError.textContent = msg; elError.style.display = 'block'; console.error(msg); }
+    function hideError(){ elError.style.display = 'none'; }
+    function showLoading(){ elLoading.style.display = 'block'; }
+    function hideLoading(){ elLoading.style.display = 'none'; }
 
-    function initMap() {
+    let map, infoWindow;
+    let allMarkers = []; // { marker, props }
+    let markerCluster = null;
+
+    function normalizeProperties(props){
+      const out = {};
+      Object.keys(props||{}).forEach(k=>{
+        const lower = k.trim().toLowerCase().replace(/\s+/g,'_');
+        out[k] = props[k];
+        if(['sektor','sector'].includes(lower)) out.Sektor = props[k];
+        if(['tahun_pembangunan','tahun','year'].includes(lower)) out.Tahun_Pembangunan = props[k];
+        if(['nama_infrastruktur','nama','name'].includes(lower)) out.Nama_Infrastruktur = props[k];
+        if(['status_keberfungsian','status'].includes(lower)) out.Status_Keberfungsian = props[k];
+      });
+      return out;
+    }
+
+    function buildInfoHtml(p){
+      if(!p) return '(tidak ada atribut)';
+      const title = p.Nama_Infrastruktur || p.nama || p.Name || p['Nama Infrastruktur'] || '';
+      const lines = [];
+      if(title) lines.push('<b>' + escapeHtml(title) + '</b>');
+      if(p.Sektor) lines.push('Sektor: ' + escapeHtml(p.Sektor));
+      if(p.Tahun_Pembangunan) lines.push('Tahun: ' + escapeHtml(p.Tahun_Pembangunan));
+      if(p.Status_Keberfungsian) lines.push('Status: ' + escapeHtml(p.Status_Keberfungsian));
+      if(p.Keterangan) lines.push('<div style="margin-top:6px">' + escapeHtml(p.Keterangan) + '</div>');
+      return '<div style="max-width:300px;font-size:13px">' + lines.join('<br>') + '</div>';
+    }
+
+    function updateFilterInfo(count){
+      document.getElementById('filterInfo').textContent = 'Menampilkan ' + count + ' titik';
+    }
+
+    function clearAllMarkers(){
+      if(markerCluster && typeof markerCluster.clearMarkers === 'function') markerCluster.clearMarkers();
+      allMarkers.forEach(m => m.marker.setMap(null));
+      allMarkers = [];
+    }
+
+    function createMarkersFromGeo(geo){
+      clearAllMarkers();
+      const markers = [];
+      const bounds = new google.maps.LatLngBounds();
+
+      geo.features.forEach(f=>{
+        if(!f.geometry) return;
+        if(f.geometry.type !== 'Point') return;
+        const coords = f.geometry.coordinates;
+        if(!Array.isArray(coords) || coords.length < 2) return;
+        const lng = Number(coords[0]), lat = Number(coords[1]);
+        if(!isFinite(lat) || !isFinite(lng)) return;
+        const props = normalizeProperties(f.properties || {});
+
+        const marker = new google.maps.Marker({
+          position: { lat, lng },
+          title: props.Nama_Infrastruktur || '',
+          optimized: true
+        });
+        marker.addListener('click', ()=> {
+          infoWindow.setContent(buildInfoHtml(props));
+          infoWindow.open(map, marker);
+        });
+
+        markers.push({ marker, props });
+        bounds.extend(marker.getPosition());
+      });
+
+      allMarkers = markers;
+
+      // Use global MarkerClusterer (UMD script provides global MarkerClusterer)
+      const simpleMarkers = allMarkers.map(m => m.marker);
+      if(window.MarkerClusterer && typeof window.MarkerClusterer === 'function'){
+        if(markerCluster && typeof markerCluster.clearMarkers === 'function') markerCluster.clearMarkers();
+        markerCluster = new MarkerClusterer(map, simpleMarkers, { imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m' });
+      } else {
+        // fallback: display markers without clustering
+        simpleMarkers.forEach(m => m.setMap(map));
+        console.warn('MarkerClusterer not found. Markers shown without clustering.');
+      }
+
+      if(!bounds.isEmpty()) map.fitBounds(bounds);
+      updateFilterInfo(simpleMarkers.length);
+      return simpleMarkers.length;
+    }
+
+    async function loadGeoJSON(paths){
+      showLoading(); hideError();
+      const candidate = Array.isArray(paths) ? paths : [paths];
+      for(const p of candidate){
+        try{
+          const r = await fetch(p);
+          if(!r.ok){ console.warn('fetch', p, 'status', r.status); continue; }
+          const geo = await r.json();
+          createMarkersFromGeo(geo);
+          populateFilters(geo);
+          hideLoading();
+          return;
+        }catch(err){ console.warn('fetch error', p, err); }
+      }
+      showError('Gagal memuat GeoJSON. Periksa path dan huruf besar/kecil. Diketik: ' + candidate.join(' , '));
+      hideLoading();
+    }
+
+    function populateFilters(geo){
+      const sectors = new Set();
+      const years = new Set();
+      geo.features.forEach(f=>{
+        const p = normalizeProperties(f.properties || {});
+        if(p.Sektor && String(p.Sektor).trim()) sectors.add(String(p.Sektor).trim());
+        if(p.Tahun_Pembangunan && String(p.Tahun_Pembangunan).trim() && !isNaN(String(p.Tahun_Pembangunan).trim())) years.add(String(p.Tahun_Pembangunan).trim());
+      });
+
+      const sectorEl = document.getElementById('sectorFilter');
+      sectorEl.innerHTML = '<option value="">Semua Sektor</option>' + Array.from(sectors).sort().map(s => `<option value="${escapeHtml(s)}">${escapeHtml(s)}</option>`).join('');
+      const yearEl = document.getElementById('yearFilter');
+      yearEl.innerHTML = '<option value="">Semua Tahun</option>' + Array.from(years).sort((a,b)=>Number(a)-Number(b)).map(y => `<option value="${escapeHtml(y)}">${escapeHtml(y)}</option>`).join('');
+    }
+
+    function applyFilter(){
+      hideError();
+      const sector = document.getElementById('sectorFilter').value;
+      const year = document.getElementById('yearFilter').value;
+      if(allMarkers.length === 0){ updateFilterInfo(0); return; }
+
+      const visible = [];
+      allMarkers.forEach(({marker, props})=>{
+        const matchesSector = !sector || (props.Sektor && String(props.Sektor).trim() === sector);
+        const matchesYear = !year || (props.Tahun_Pembangunan && String(props.Tahun_Pembangunan).trim() === year);
+        if(matchesSector && matchesYear){ marker.setMap(map); visible.push(marker); } else { marker.setMap(null); }
+      });
+
+      if(markerCluster && typeof markerCluster.clearMarkers === 'function') markerCluster.clearMarkers();
+      if(typeof MarkerClusterer === 'function'){
+        markerCluster = new MarkerClusterer(map, visible, { imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m' });
+      }
+      updateFilterInfo(visible.length);
+      if(visible.length > 0){
+        const b = new google.maps.LatLngBounds();
+        visible.forEach(m => b.extend(m.getPosition()));
+        if(!b.isEmpty()) map.fitBounds(b);
+      }
+    }
+
+    function resetFilter(){
+      document.getElementById('sectorFilter').value = '';
+      document.getElementById('yearFilter').value = '';
+      allMarkers.forEach(i => i.marker.setMap(map));
+      if(markerCluster && typeof markerCluster.clearMarkers === 'function') markerCluster.clearMarkers();
+      markerCluster = new MarkerClusterer(map, allMarkers.map(i => i.marker), { imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m' });
+      updateFilterInfo(allMarkers.length);
+      const b = new google.maps.LatLngBounds();
+      allMarkers.forEach(i => b.extend(i.marker.getPosition()));
+      if(!b.isEmpty()) map.fitBounds(b);
+    }
+
+    // initMap called by Google Maps API
+    function initMap(){
       map = new google.maps.Map(document.getElementById('map'), {
-        center: { lat: -3.5, lng: 128.2 },
-        zoom: 6
+        center: { lat:-3.3, lng:129.1 },
+        zoom: 7,
+        mapTypeControl: false,
+        streetViewControl: false,
       });
+      infoWindow = new google.maps.InfoWindow();
 
-      document.getElementById('loadGeojson').addEventListener('click', () => loadGeoJSON(GEOJSON_URL));
-      document.getElementById('toggleWMS').addEventListener('click', toggleWMS);
+      document.getElementById('applyBtn').addEventListener('click', applyFilter);
+      document.getElementById('resetBtn').addEventListener('click', resetFilter);
 
-      // Option: load automatically
-      // loadGeoJSON(GEOJSON_URL);
+      // try several candidate paths. Adjust if file sits in subfolder or has different name.
+      loadGeoJSON(['DATA_SPASIAL.geojson', 'DATA_SPASIAL.geojson', './DATA_SPASIAL.geojson']);
     }
 
-    // Muat GeoJSON menggunakan fetch dan tambahkan ke map.data
-    async function loadGeoJSON(url) {
-      setStatus('Memuat GeoJSON...');
-      clearData();
-
-      try {
-        const res = await fetch(url);
-        if (!res.ok) throw new Error('HTTP ' + res.status);
-        const geojson = await res.json();
-
-        // Tambah ke Data layer
-        map.data.addGeoJson(geojson);
-
-        // Styling sederhana
-        map.data.setStyle(feature => {
-          const geom = feature.getGeometry().getType();
-          if (geom === 'Point') return { icon: getCircleIcon(8) };
-          if (geom === 'LineString') return { strokeWeight: 3, strokeColor: '#1f78b4' };
-          return { fillColor: '#33a02c', strokeColor: '#006400', strokeWeight: 1 };
-        });
-
-        // Buat marker untuk point agar InfoWindow lebih stabil di semua browser
-        map.data.forEach(f => {
-          if (f.getGeometry().getType() === 'Point') {
-            const latLng = toLatLng(f.getGeometry().get());
-            const marker = new google.maps.Marker({ position: latLng, map });
-            marker.feature = f; // referensi balik
-            marker.addListener('click', () => showFeatureInfo(f, marker));
-            markers.push(marker);
-          }
-        });
-
-        setStatus('Selesai. Fitur: ' + countFeatures(geojson));
-      } catch (err) {
-        console.error(err);
-        setStatus('Gagal memuat GeoJSON: ' + err.message);
-      }
-    }
-
-    function countFeatures(geojson) {
-      if (!geojson) return 0;
-      if (geojson.type === 'FeatureCollection') return geojson.features.length;
-      return 1;
-    }
-
-    function toLatLng(coords) {
-      // Google Maps Data returns LatLngLiteral for point via feature.getGeometry().get()
-      if (coords.lat !== undefined && coords.lng !== undefined) return coords;
-      // Some GeoJSON parsers give [lng,lat]
-      return { lat: coords[1], lng: coords[0] };
-    }
-
-    function showFeatureInfo(feature, anchor) {
-      const props = feature.getProperties();
-      let content = '<div style="min-width:180px">';
-      for (const k in props) {
-        content += '<div><strong>' + escapeHtml(k) + '</strong>: ' + escapeHtml(String(props[k])) + '</div>';
-      }
-      content += '</div>';
-      infoWindow.setContent(content);
-      infoWindow.open(map, anchor);
-    }
-
-    function escapeHtml(s) {
-      return s.replaceAll('&', '&amp;').replaceAll('<', '&lt;').replaceAll('>', '&gt;');
-    }
-
-    function getCircleIcon(size) {
-      return {
-        path: google.maps.SymbolPath.CIRCLE,
-        scale: size,
-        fillColor: '#1f78b4',
-        fillOpacity: 0.9,
-        strokeWeight: 0
-      };
-    }
-
-    function clearData() {
-      // Hapus data layer
-      map.data.forEach(f => map.data.remove(f));
-      // Hapus marker
-      markers.forEach(m => m.setMap(null));
-      markers.length = 0;
-      setStatus('');
-    }
-
-    function setStatus(text) { document.getElementById('status').textContent = text; }
-
-    // WMS overlay sederhana via ImageMapType
-    function createWMSLayer() {
-      const tileSize = 256;
-      return new google.maps.ImageMapType({
-        getTileUrl: (coord, zoom) => {
-          const bounds = getTileBounds(coord.x, coord.y, zoom);
-          const params = new URLSearchParams({
-            service: 'WMS',
-            version: '1.1.1',
-            request: 'GetMap',
-            layers: 'bluemarble',
-            styles: '',
-            srs: 'EPSG:4326',
-            bbox: [bounds.south, bounds.west, bounds.north, bounds.east].join(','),
-            width: tileSize,
-            height: tileSize,
-            format: 'image/png',
-            transparent: 'true'
-          });
-          return WMS_BASE + '?' + params.toString();
-        },
-        tileSize
-      });
-    }
-
-    function toggleWMS() {
-      if (wmsTileLayer) {
-        map.overlayMapTypes.removeAt(map.overlayMapTypes.getLength() - 1);
-        wmsTileLayer = null;
-        setStatus('WMS dimatikan');
-        return;
-      }
-      wmsTileLayer = createWMSLayer();
-      map.overlayMapTypes.insertAt(map.overlayMapTypes.getLength(), wmsTileLayer);
-      setStatus('WMS aktif');
-    }
-
-    // Helper: hitung bbox tile di EPSG:4326
-    function getTileBounds(x, y, z) {
-      const n = Math.pow(2, z);
-      const lonLeft = x / n * 360 - 180;
-      const lonRight = (x + 1) / n * 360 - 180;
-      const latTop = rad2deg(Math.atan(Math.sinh(Math.PI * (1 - 2 * y / n))));
-      const latBottom = rad2deg(Math.atan(Math.sinh(Math.PI * (1 - 2 * (y + 1) / n))));
-      return { west: lonLeft, east: lonRight, north: latTop, south: latBottom };
-    }
-    function rad2deg(r) { return r * 180 / Math.PI; }
-
-    // Start
+    // expose for debug
     window.initMap = initMap;
-    // Jika Google API sudah dimuat tanpa callback, panggil initMap
-    if (typeof google === 'object' && google.maps) initMap();
   </script>
 </body>
 </html>
