Update and rename homepage.html to index.html

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="site-title">MalukuInfraZone</div>
     </div>
     <nav class="nav">
-      <a href="homepage.html">Beranda</a>
+      <a href="index.html">Beranda</a>
       <a href="peta.html">Peta Infrastruktur</a>
     </nav>
   </header>
