--- a/peta.html
+++ b/peta.html
@@ -54,7 +54,7 @@
         <div style="font-size:13px;color:var(--muted)">BPBPK Maluku</div>
       </div>
       <div class="controls">
-        <a href="homepage.html" class="btn btn-back">Kembali</a>
+        <a href="index.html" class="btn btn-back">Kembali</a>
       </div>
     </header>
 
