--- a/peta.html
+++ b/peta.html
@@ -42,13 +42,31 @@
       background:rgba(255,255,255,0.02);border-radius:8px;font-size:14px;color:#e6eef7}
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
 
-    /* InfoWindow reset */
-    .gm-style .gm-style-iw { padding: 0 !important; max-width: 320px !important; }
-    .gm-style .gm-style-iw > div { padding: 0 !important; }
-    .gm-style .gm-style-iw-d { padding: 0 !important; }
-    .gm-style .gm-style-iw + div { display: none !important; }
-    .custom-iw {font-size:13px;color:#021129;background:#fff;padding:8px;border-radius:6px;max-width:320px;}
-    .custom-iw > div { margin:0; padding:0; line-height:1.4; }
+    /* InfoWindow overrides - remove extra top space and ensure left align */
+    .gm-style .gm-style-iw {
+      padding: 0 !important;
+      margin: 0 !important;
+      max-width: 320px !important;
+    }
+    .gm-style .gm-style-iw > div,
+    .gm-style .gm-style-iw-d,
+    .gm-style .gm-style-iw-c {
+      padding: 0 !important;
+      margin: 0 !important;
+    }
+    .gm-style .gm-style-iw + div { display: none !important; } /* hide wrapper that can add space */
+
+    .custom-iw {
+      font-size:13px;
+      color:#021129;
+      background:#fff;
+      padding:8px;
+      border-radius:6px;
+      max-width:320px;
+      text-align:left;
+      line-height:1.4;
+    }
+    .custom-iw > div { margin:0; padding:0; }
 
     /* Hero bawah (tanpa background) */
     .site-hero{margin-top:28px;text-align:center}
@@ -56,32 +74,30 @@
     .hero-title{font-weight:600;font-size:24px;line-height:1.3;margin:8px 0;color:#fff}
     .hero-sub{color:#a7b6c8;font-size:15px;margin-top:6px}
 
-    /* FOOTER centered */
-    .site-footer{background:#050505;color:#d1d5db;padding:44px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1100px;margin:0 auto;display:flex;gap:28px;justify-content:center;flex-wrap:wrap;text-align:left}
-    .footer-brand,.footer-col{flex:1;min-width:220px}
-    .footer-brand .logo{font-weight:800;font-size:22px;color:#fff}
-    .footer-col h4{color:#fff;font-weight:600;margin-bottom:10px}
-    .footer-links{display:flex;flex-direction:column;gap:8px}
-    .footer-note{margin-top:18px;color:#9ca3af;font-size:13px}
-
-    /* footer links style - non blue */
-    .footer-links a{
-      color:#9ca3af;
-      text-decoration:underline;
-      transition:color .12s ease;
-    }
+    /* FOOTER centered and tidy */
+    .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
+    .footer-inner{max-width:1100px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;text-align:left}
+    .footer-brand{flex:1 1 280px}
+    .footer-brand .logo{font-weight:800;font-size:28px;color:#fff;margin-bottom:6px}
+    .footer-brand .tag{color:#9ca3af;margin:6px 0 12px}
+    .footer-note{color:#9ca3af;font-size:14px;line-height:1.6}
+    .footer-col{flex:1 1 220px}
+    .footer-col h4{color:#fff;font-weight:700;margin-bottom:12px;font-size:16px}
+    .footer-links{display:flex;flex-direction:column;gap:8px;margin:0;padding:0;list-style:none}
+    .footer-links a{color:#9ca3af;text-decoration:none;font-size:15px;line-height:1.6;transition:color .12s}
     .footer-links a:hover{color:#ffffff}
 
-    /* Tombol kembali ke atas */
-    .goto-top{position:fixed;right:18px;bottom:48px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
+    /* Tombol pergi ke atas - sedikit diangkat */
+    .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
 
     @media (max-width:900px){
       .hero-title{font-size:20px}
       #map{height:65vh}
       .controls{flex-direction:column;align-items:flex-start}
-      .footer-inner{flex-direction:column;align-items:center;text-align:center}
+      .footer-inner{gap:20px;justify-content:center;text-align:center}
+      .footer-brand,.footer-col{flex:1 1 100%;min-width:auto}
+      .footer-brand .logo{font-size:24px}
     }
   </style>
 </head>
@@ -132,29 +148,35 @@
     </section>
   </div>
 
-  <!-- Footer centered -->
+  <!-- Footer -->
   <footer class="site-footer" role="contentinfo">
     <div class="footer-inner">
       <div class="footer-brand">
         <div class="logo">BalaiConnect.</div>
-        <div style="font-family:'Poppins', cursive;color:#9ca3af;margin-top:8px">bpbpkjatim</div>
-        <div class="footer-note">© 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Jawa Timur. All Rights Reserved.</div>
+        <div class="tag">bpbpkjatim</div>
+        <div class="footer-note">
+          © 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Jawa Timur.
+          Semua hak dilindungi.
+        </div>
       </div>
 
       <div class="footer-col">
         <h4>Indonesia</h4>
-        <div>Jl. Raya Menganti Wiyung, Wiyung, Kec. Wiyung, Surabaya, Jawa Timur 60228</div>
+        <div>Jl. Raya Menganti Wiyung, Wiyung, Kec. Wiyung</div>
+        <div>Surabaya, Jawa Timur 60228</div>
       </div>
 
       <div class="footer-col">
-        <h4>Follow us on</h4>
-        <div class="footer-links">
-          <a href="#">Instagram</a>
-          <a href="#">Youtube</a>
-          <a href="#">Website</a>
-          <a href="#">Tiktok</a>
-          <a href="#">Thread</a>
-        </div>
+        <h4>Follow us</h4>
+        <nav aria-label="Sosial media">
+          <ul class="footer-links">
+            <li><a href="#" rel="noopener noreferrer">Instagram</a></li>
+            <li><a href="#" rel="noopener noreferrer">Youtube</a></li>
+            <li><a href="#" rel="noopener noreferrer">Website</a></li>
+            <li><a href="#" rel="noopener noreferrer">Tiktok</a></li>
+            <li><a href="#" rel="noopener noreferrer">Thread</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </footer>
@@ -284,7 +306,7 @@
       geo.features.forEach(f=>{
         const p = normalizeProperties(f.properties || {});
         if(p.Sektor) uniqueSectors.add(String(p.Sektor).trim());
-        if(p.Tahun_Pembangunan && !isNaN(Number(p.Tahun_Pembangunan))) uniqueYears.add(String(p.Tahun_Pembangungan || p.Tahun_Pembangunan).trim());
+        if(p.Tahun_Pembangunan && !isNaN(Number(p.Tahun_Pembangungan || p.Tahun_Pembangunan))) uniqueYears.add(String(p.Tahun_Pembangungan || p.Tahun_Pembangunan).trim());
         if(p.Wilayah) uniqueRegions.add(String(p.Wilayah).trim());
       });
       document.getElementById('sectorFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueSectors).sort().map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
