--- a/peta.html
+++ b/peta.html
@@ -31,7 +31,6 @@
     /* MAP */
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;
       box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
-
     .status{margin-top:8px;color:var(--muted);font-size:13px}
 
     /* LEGEND */
@@ -55,6 +54,19 @@
       margin: 0 !important;
     }
     .gm-style .gm-style-iw + div { display: none !important; } /* hide wrapper that can add space */
+
+    /* Kecilkan tombol close (X) agar tidak membuat gap atas besar */
+    .gm-ui-hover-effect {
+      width: 18px !important;
+      height: 18px !important;
+      top: 6px !important;
+      right: 6px !important;
+      border-radius:4px !important;
+      box-shadow: none !important;
+    }
+    .gm-ui-hover-effect > span {
+      transform: scale(0.78) !important;
+    }
 
     .custom-iw {
       font-size:13px;
@@ -117,13 +129,10 @@
     <div style="margin-top:12px;display:flex;gap:8px;align-items:center;flex-wrap:wrap;justify-content:center">
       <label style="font-size:13px;color:var(--muted)">Sektor</label>
       <div class="select-wrap"><select id="sectorFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Wilayah</label>
       <div class="select-wrap"><select id="regionFilter" class="select"></select></div>
-
       <label style="font-size:13px;color:var(--muted)">Tahun</label>
       <div class="select-wrap"><select id="yearFilter" class="select"></select></div>
-
       <button id="applyBtn" class="btn" style="background:var(--accent);color:#021129">Terapkan</button>
       <button id="resetBtn" class="btn btn-back">Reset</button>
     </div>
