--- a/peta.html
+++ b/peta.html
@@ -42,43 +42,60 @@
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
 
     /* InfoWindow overrides - remove extra top space and ensure left align */
-    .gm-style .gm-style-iw {
-      padding: 0 !important;
-      margin: 0 !important;
-      max-width: 320px !important;
-    }
-    .gm-style .gm-style-iw > div,
-    .gm-style .gm-style-iw-d,
-    .gm-style .gm-style-iw-c {
-      padding: 0 !important;
-      margin: 0 !important;
-    }
-    .gm-style .gm-style-iw + div { display: none !important; } /* hide wrapper that can add space */
+    /* InfoWindow: jangan sembunyikan wrapper. Atur ulang styling close button. */
+.gm-style .gm-style-iw {
+  padding: 0 !important;
+  margin: 0 !important;
+  max-width: 320px !important;
+  box-shadow: none !important;
+}
+.gm-style .gm-style-iw > div,
+.gm-style .gm-style-iw-d,
+.gm-style .gm-style-iw-c {
+  padding: 0 !important;
+  margin: 0 !important;
+}
 
-    /* Kecilkan tombol close (X) agar tidak membuat gap atas besar */
-    .gm-ui-hover-effect {
-      width: 18px !important;
-      height: 18px !important;
-      top: 6px !important;
-      right: 6px !important;
-      border-radius:4px !important;
-      box-shadow: none !important;
-    }
-    .gm-ui-hover-effect > span {
-      transform: scale(0.78) !important;
-    }
+/* Stilize close button: ukuran kecil, posisi rapat ke pojok, tanpa distortion */
+.gm-ui-hover-effect {
+  width: 22px !important;
+  height: 22px !important;
+  top: 6px !important;
+  right: 6px !important;
+  border-radius: 6px !important;
+  background: rgba(0,0,0,0.06) !important;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05) !important;
+  border: 1px solid rgba(0,0,0,0.08) !important;
+  overflow: hidden !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
 
-    .custom-iw {
-      font-size:13px;
-      color:#021129;
-      background:#fff;
-      padding:8px;
-      border-radius:6px;
-      max-width:320px;
-      text-align:left;
-      line-height:1.4;
-    }
-    .custom-iw > div { margin:0; padding:0; }
+/* Jika icon berada dalam span/svg, reset transform/scale */
+.gm-ui-hover-effect > span,
+.gm-ui-hover-effect svg,
+.gm-ui-hover-effect img {
+  width: 12px !important;
+  height: 12px !important;
+  transform: none !important;
+  display: block !important;
+  margin: 0 !important;
+  line-height: 1 !important;
+}
+
+/* Konten info tetap rapat dan rata kiri */
+.custom-iw {
+  font-size:13px;
+  color:#021129;
+  background:#fff;
+  padding:8px;
+  border-radius:6px;
+  max-width:320px;
+  text-align:left;
+  line-height:1.4;
+}
+.custom-iw > div { margin:0; padding:0; }
 
     /* Hero bawah (tanpa background) */
     .site-hero{margin-top:28px;text-align:center}
@@ -161,18 +178,18 @@
   <footer class="site-footer" role="contentinfo">
     <div class="footer-inner">
       <div class="footer-brand">
-        <div class="logo">BalaiConnect.</div>
-        <div class="tag">bpbpkjatim</div>
+        <div class="logo">MalukuInfraZone</div>
+        <div class="tag">BPBPK Maluku</div>
         <div class="footer-note">
-          © 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Jawa Timur.
+          © 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Maluku.
           Semua hak dilindungi.
         </div>
       </div>
 
       <div class="footer-col">
         <h4>Indonesia</h4>
-        <div>Jl. Raya Menganti Wiyung, Wiyung, Kec. Wiyung</div>
-        <div>Surabaya, Jawa Timur 60228</div>
+        <div>Jl. D. I. Panjaitan, Uritetu, Kec. Sirimau</div>
+        <div>Kota Ambon, Maluku</div>
       </div>
 
       <div class="footer-col">
@@ -180,10 +197,6 @@
         <nav aria-label="Sosial media">
           <ul class="footer-links">
             <li><a href="#" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="#" rel="noopener noreferrer">Youtube</a></li>
-            <li><a href="#" rel="noopener noreferrer">Website</a></li>
-            <li><a href="#" rel="noopener noreferrer">Tiktok</a></li>
-            <li><a href="#" rel="noopener noreferrer">Thread</a></li>
           </ul>
         </nav>
       </div>
