--- a/peta.html
+++ b/peta.html
@@ -168,9 +168,8 @@
 
     <!-- Hero bawah (tanpa background) -->
     <section id="site-hero" class="site-hero" aria-label="Tentang BalaiConnect">
-      <div class="hero-logo">BalaiConnect.</div>
-      <h1 class="hero-title">Menjadi wujud nyata komitmen Balai Penataan Bangunan, Prasarana, dan Kawasan Jawa Timur</h1>
-      <p class="hero-sub">Memberikan pelayanan prima, cepat, profesional kepada masyarakat dan mitra kerja.</p>
+      <div class="hero-logo">MalukuInfraZone.</div>
+      <h1 class="hero-title">Balai Penataan Bangunan, Prasarana, dan Kawasan Maluku</h1>
     </section>
   </div>
 
@@ -196,7 +195,18 @@
         <h4>Follow us</h4>
         <nav aria-label="Sosial media">
           <ul class="footer-links">
-            <li><a href="#" rel="noopener noreferrer">Instagram</a></li>
+           <li>
+  <a href="https://www.instagram.com/yourhandle"
+     target="_blank"
+     rel="noopener noreferrer"
+     aria-label="Instagram BPBPK Maluku"
+     style="display:inline-flex;align-items:center;gap:10px;color:inherit;text-decoration:none">
+    <img src="images/instagram.png"
+         alt=""
+         style="width:18px;height:18px;display:block;flex-shrink:0" />
+    <span>Instagram</span>
+  </a>
+</li>
           </ul>
         </nav>
       </div>
