--- a/peta.html
+++ b/peta.html
@@ -115,7 +115,8 @@
     .footer-links{display:flex;flex-direction:column;gap:8px;margin:0;padding:0;list-style:none}
     .footer-links a{color:#9ca3af;text-decoration:none;font-size:15px;line-height:1.6;transition:color .12s}
     .footer-links a:hover{color:#ffffff}
-
+    .footer-links img { width:18px; height:18px; display:block; flex-shrink:0; }
+    .footer-links a { display:inline-flex; align-items:center; gap:10px; color:inherit; text-decoration:none; }
     /* Tombol pergi ke atas - sedikit diangkat */
     .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
     .goto-top span{font-size:18px}
@@ -196,7 +197,7 @@
         <nav aria-label="Sosial media">
           <ul class="footer-links">
            <li>
-  <a href="https://www.instagram.com/yourhandle"
+  <a href="https://www.instagram.com/pu_ciptakarya_maluku"
      target="_blank"
      rel="noopener noreferrer"
      aria-label="Instagram BPBPK Maluku"
