--- a/peta.html
+++ b/peta.html
@@ -103,32 +103,51 @@
     .hero-title{font-weight:600;font-size:24px;line-height:1.3;margin:8px 0;color:#fff}
     .hero-sub{color:#a7b6c8;font-size:15px;margin-top:6px}
 
-    /* FOOTER centered and tidy */
-    .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1100px;margin:0 auto;display:flex;gap:40px;justify-content:space-between;align-items:flex-start;flex-wrap:wrap;text-align:left}
-    .footer-brand{flex:1 1 280px}
-    .footer-brand .logo{font-weight:800;font-size:28px;color:#fff;margin-bottom:6px}
-    .footer-brand .tag{color:#9ca3af;margin:6px 0 12px}
-    .footer-note{color:#9ca3af;font-size:14px;line-height:1.6}
-    .footer-col{flex:1 1 220px}
-    .footer-col h4{color:#fff;font-weight:700;margin-bottom:12px;font-size:16px}
-    .footer-links{display:flex;flex-direction:column;gap:8px;margin:0;padding:0;list-style:none}
-    .footer-links a{color:#9ca3af;text-decoration:none;font-size:15px;line-height:1.6;transition:color .12s}
-    .footer-links a:hover{color:#ffffff}
-    .footer-links img { width:18px; height:18px; display:block; flex-shrink:0; }
-    .footer-links a { display:inline-flex; align-items:center; gap:10px; color:inherit; text-decoration:none; }
-    /* Tombol pergi ke atas - sedikit diangkat */
-    .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
-    .goto-top span{font-size:18px}
+/* Footer: center everything */
+.site-footer{
+  background:#050505;
+  color:#d1d5db;
+  padding:36px 20px;
+  margin-top:20px;
+  border-radius:8px;
+  text-align:center;
+}
+.footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  display:flex;
+  gap:40px;
+  justify-content:center;    /* center columns horizontally */
+  align-items:flex-start;
+  flex-wrap:wrap;
+  text-align:center;         /* center text inside each column */
+}
 
-    @media (max-width:900px){
-      .hero-title{font-size:20px}
-      #map{height:65vh}
-      .controls{flex-direction:column;align-items:flex-start}
-      .footer-inner{gap:20px;justify-content:center;text-align:center}
-      .footer-brand,.footer-col{flex:1 1 100%;min-width:auto}
-      .footer-brand .logo{font-size:24px}
-    }
+/* Make columns responsive and balanced */
+.footer-brand,
+.footer-col{
+  flex:1 1 300px;
+  min-width:220px;
+}
+
+/* Brand tweaks */
+.footer-brand .logo{ font-weight:800; font-size:28px; color:#fff; margin-bottom:6px; }
+.footer-brand .tag{ color:#9ca3af; margin:6px 0 12px; }
+.footer-note{ color:#9ca3af; font-size:14px; line-height:1.6; }
+
+/* Column titles and links */
+.footer-col h4{ color:#fff; font-weight:700; margin-bottom:12px; font-size:16px; }
+.footer-links{ display:flex; flex-direction:column; gap:8px; margin:0; padding:0; list-style:none; align-items:center; }
+.footer-links a{ color:#9ca3af; text-decoration:none; font-size:15px; line-height:1.6; transition:color .12s; }
+.footer-links a:hover{ color:#fff; }
+
+/* Mobile: keep columns stacked and centered */
+@media (max-width:900px){
+  .footer-inner{ gap:20px; justify-content:center; text-align:center; }
+  .footer-brand,.footer-col{ flex:1 1 100%; min-width:auto; }
+  .footer-brand .logo{ font-size:24px; }
+}
+
   </style>
 </head>
 <body>
@@ -168,8 +187,8 @@
     </div>
 
     <!-- Hero bawah (tanpa background) -->
-    <section id="site-hero" class="site-hero" aria-label="Tentang BalaiConnect">
-      <div class="hero-logo">MalukuInfraZone.</div>
+    <section id="site-hero" class="site-hero" aria-label="Tentang MalukuInfraZone">
+      <div class="hero-logo">MalukuInfraZone</div>
       <h1 class="hero-title">Balai Penataan Bangunan, Prasarana, dan Kawasan Maluku</h1>
     </section>
   </div>
