--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <!-- Styles -->
@@ -22,7 +23,8 @@
       --accent-2: #f59e0b;
       --muted: #a7b6c8;
       --font-poppins: 'Poppins', sans-serif;
-      --font-montserrat: 'Montserrat', sans-serif;
+      --font-montserrat: 'Montserrat', sans-serif
+      --font-raleway: 'Raleway', sans-serif;
     }
 
     html, body {
@@ -62,7 +64,7 @@
       height: 44px;
     }
     .site-title {
-      font-family: var(--font-montserrat);
+      font-family: var(--font-raleway);
       font-weight: 800;
       font-size: 20px;
     }
