--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Montserrat:wght@400;600;700;900&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <!-- Styles -->
   <style>
@@ -23,7 +22,7 @@
       --accent-2: #f59e0b;
       --muted: #a7b6c8;
       --font-poppins: 'Poppins', sans-serif;
-      --font-montserrat: 'Montserrat', sans-serif
+      --font-montserrat: 'Montserrat', sans-serif;
       --font-raleway: 'Raleway', sans-serif;
     }
 
@@ -34,6 +33,7 @@
       background: var(--bg-dark);
       color: #fff;
       overflow-x: hidden;
+      padding-top: 72px; /* ruang untuk header fixed */
     }
 
     /* ===== Header ===== */
