--- a/peta.html
+++ b/peta.html
@@ -4,45 +4,31 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Peta Infrastruktur - MalukuInfraZone</title>
-  <link rel="icon" type="image/png" href="images/logo-pu.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
-  <!-- Fonts -->
+  <!-- Fonts: Raleway + Poppins -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Montserrat:wght@400;600;700;900&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --bg:#071024;
-      --muted:#a7b6c8;
-      --accent:#3b82f6;
-      --font-poppins:'Poppins',sans-serif;
-      --font-montserrat:'Montserrat',sans-serif;
-      --font-raleway:'Raleway',sans-serif;
-    }
-
+    :root{--bg:#071024;--muted:#a7b6c8;--accent:#3b82f6}
     html,body{
       height:100%;margin:0;
-      font-family:var(--font-poppins);
+      font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;
       background:linear-gradient(180deg,var(--bg),#05060a);
       color:#fff;
     }
 
     .wrap{max-width:1400px;margin:20px auto;padding:20px;text-align:center}
     header{display:flex;justify-content:space-between;align-items:center;gap:12px;text-align:left}
-    .title{
-      font-weight:800;
-      font-family:var(--font-raleway); /* pakai Raleway untuk judul */
-      font-size:20px;
-    }
-
+    .title{font-weight:700;font-family:"Raleway",Poppins,system-ui,Segoe UI,Roboto,Arial}
     .btn{display:inline-block;padding:8px 14px;border-radius:8px;text-decoration:none;font-weight:700;cursor:pointer}
     .btn-back{background:rgba(255,255,255,0.04);color:#e6eef7;border:1px solid rgba(255,255,255,0.08)}
-
     .controls{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
     .select-wrap{position:relative;display:inline-block}
     .select{
-      background:#fff;color:#021129;padding:8px 12px;border-radius:8px;
+      background:#ffffff;color:#021129;padding:8px 12px;border-radius:8px;
       border:1px solid var(--accent);min-width:160px;font-weight:600;appearance:none;
     }
     .select-wrap::after{
@@ -52,54 +38,55 @@
     }
     select::-ms-expand{display:none}
 
+    /* MAP */
     #map{width:100%;height:85vh;border-radius:12px;background:#0b1220;
       box-shadow:0 10px 30px rgba(0,0,0,0.6);margin-top:14px;display:block}
     .status{margin-top:8px;color:var(--muted);font-size:13px}
 
+    /* LEGEND */
     .legend{display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:center;margin-top:12px;
       padding:10px 12px;background:rgba(0,0,0,0.45);border-radius:10px;
-      box-shadow:0 6px 18px rgba(0,0,0,0.45)}
+      box-shadow:0 6px 18px rgba(0,0,0,0.45);z-index:9999;position:relative}
     .legend-item{display:flex;align-items:center;gap:8px;padding:6px 8px;
       background:rgba(255,255,255,0.02);border-radius:8px;font-size:14px;color:#e6eef7}
     .legend-item img{width:28px;height:28px;object-fit:contain;filter:drop-shadow(0 3px 6px rgba(0,0,0,0.4))}
 
-    /* InfoWindow */
-    .gm-style .gm-style-iw,
-    .gm-style .gm-style-iw-d,
-    .gm-style .gm-style-iw-c {
-      padding:0!important;margin:0!important;max-width:320px!important;
-    }
+    /* InfoWindow adjustments */
+    .gm-style .gm-style-iw { padding:0!important; margin:0!important; max-width:320px!important; box-shadow:none!important; }
+    .gm-style .gm-style-iw > div, .gm-style .gm-style-iw-d, .gm-style .gm-style-iw-c { padding:0!important; margin:0!important; }
     .gm-ui-hover-effect{
       width:22px!important;height:22px!important;top:6px!important;right:6px!important;
       border-radius:6px!important;background:rgba(0,0,0,0.06)!important;
       display:flex!important;align-items:center!important;justify-content:center!important;
+      border:1px solid rgba(0,0,0,0.08)!important;box-shadow:0 1px 2px rgba(0,0,0,0.05)!important;
     }
-    .gm-ui-hover-effect > span,
-    .gm-ui-hover-effect img,
-    .gm-ui-hover-effect svg {
-      width:12px!important;height:12px!important;transform:none!important;
+    .gm-ui-hover-effect > span, .gm-ui-hover-effect svg, .gm-ui-hover-effect img {
+      width:12px!important;height:12px!important;transform:none!important;display:block!important;margin:0!important;
     }
     .custom-iw{
-      font-size:13px;color:#021129;background:#fff;padding:8px;border-radius:6px;
-      max-width:320px;text-align:left;line-height:1.4;
+      font-size:13px;color:#021129;background:#fff;padding:8px;border-radius:6px;max-width:320px;text-align:left;line-height:1.4;
     }
+    .custom-iw > div{margin:0;padding:0}
 
-    /* Hero bawah */
+    /* Hero below */
     .site-hero{margin-top:28px;text-align:center}
-    .hero-logo{font-weight:800;font-size:28px;color:#fff;font-family:var(--font-raleway);}
-    .hero-title{font-weight:600;font-size:24px;line-height:1.3;margin:8px 0;color:#fff;font-family:var(--font-montserrat);}
+    .hero-logo{font-weight:800;font-size:28px;color:#fff;font-family:"Raleway",Poppins,system-ui}
+    .hero-title{font-weight:600;font-size:24px;line-height:1.3;margin:8px 0;color:#fff}
     .hero-sub{color:var(--muted);font-size:15px;margin-top:6px}
 
-    /* Footer */
+    /* Footer: centered */
     .site-footer{background:#050505;color:#d1d5db;padding:36px 20px;margin-top:20px;border-radius:8px;text-align:center}
-    .footer-inner{max-width:1100px;margin:0 auto;display:flex;gap:40px;justify-content:center;align-items:flex-start;flex-wrap:wrap;text-align:center}
-    .footer-brand,.footer-col{flex:1 1 280px;min-width:220px}
-    .footer-brand .logo{font-weight:800;font-size:28px;color:#fff;margin-bottom:6px;font-family:var(--font-raleway);}
+    .footer-inner{max-width:1200px;margin:0 auto;display:flex;gap:40px;justify-content:center;align-items:flex-start;flex-wrap:wrap;text-align:center}
+    .footer-brand,.footer-col{flex:1 1 300px;min-width:220px}
+    .footer-brand .logo{font-weight:800;font-size:28px;color:#fff;margin-bottom:6px;font-family:"Raleway",Poppins}
     .footer-note{color:#9ca3af;font-size:14px;line-height:1.6}
     .footer-col h4{color:#fff;font-weight:700;margin-bottom:12px;font-size:16px}
     .footer-links{display:flex;flex-direction:column;gap:8px;margin:0;padding:0;list-style:none;align-items:center}
     .footer-links a{color:#9ca3af;text-decoration:none;font-size:15px;line-height:1.6}
     .footer-links a:hover{color:#fff}
+
+    .goto-top{position:fixed;right:20px;bottom:28px;width:44px;height:44px;border-radius:22px;background:#111;color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 6px 18px rgba(0,0,0,0.4)}
+    .goto-top span{font-size:18px}
 
     @media(max-width:900px){
       #map{height:65vh}
@@ -117,12 +104,12 @@
         <div class="title">Peta Infrastruktur — MalukuInfraZone</div>
         <div style="font-size:13px;color:var(--muted)">BPBPK Maluku</div>
       </div>
-      <div class="controls">
+      <div class="controls" aria-hidden="false">
         <a href="index.html" class="btn btn-back">Kembali</a>
       </div>
     </header>
 
-    <!-- Filter -->
+    <!-- Filters -->
     <div style="margin-top:12px;display:flex;gap:8px;align-items:center;flex-wrap:wrap;justify-content:center">
       <label style="font-size:13px;color:var(--muted)">Sektor</label>
       <div class="select-wrap"><select id="sectorFilter" class="select"></select></div>
@@ -146,38 +133,47 @@
       <div class="legend-item"><img src="images/icon-kawasan.png" alt=""><span>Pengembangan Kawasan Strategis</span></div>
     </div>
 
-    <!-- Hero bawah -->
-    <section id="site-hero" class="site-hero">
-      <div class="hero-logo">BalaiConnect.</div>
-      <h1 class="hero-title">Menjadi wujud nyata komitmen Balai Penataan Bangunan, Prasarana, dan Kawasan Jawa Timur</h1>
-      <p class="hero-sub">Memberikan pelayanan prima, cepat, profesional kepada masyarakat dan mitra kerja.</p>
+    <!-- Hero below -->
+    <section id="site-hero" class="site-hero" aria-label="Tentang MalukuInfraZone">
+      <div class="hero-logo">MalukuInfraZone</div>
+      <h1 class="hero-title">Balai Penataan Bangunan, Prasarana, dan Kawasan Maluku</h1>
     </section>
   </div>
 
   <!-- Footer -->
-  <footer class="site-footer">
+  <footer class="site-footer" role="contentinfo">
     <div class="footer-inner">
       <div class="footer-brand">
-        <div class="logo">BalaiConnect.</div>
-        <div class="footer-note">© 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Jawa Timur. Semua hak dilindungi.</div>
+        <div class="logo">MalukuInfraZone</div>
+        <div class="tag">BPBPK Maluku</div>
+        <div class="footer-note">
+          © 2025 Balai Penataan Bangunan, Prasarana dan Kawasan Maluku. Semua hak dilindungi.
+        </div>
       </div>
+
       <div class="footer-col">
         <h4>Indonesia</h4>
-        <div>Jl. Raya Menganti Wiyung, Wiyung, Kec. Wiyung</div>
-        <div>Surabaya, Jawa Timur 60228</div>
+        <div>Jl. D. I. Panjaitan, Uritetu, Kec. Sirimau</div>
+        <div>Kota Ambon, Maluku</div>
       </div>
+
       <div class="footer-col">
         <h4>Follow us</h4>
-        <ul class="footer-links">
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Youtube</a></li>
-          <li><a href="#">Website</a></li>
-          <li><a href="#">Tiktok</a></li>
-          <li><a href="#">Thread</a></li>
-        </ul>
+        <nav aria-label="Sosial media">
+          <ul class="footer-links">
+            <li>
+              <a href="https://www.instagram.com/pu_ciptakarya_maluku" target="_blank" rel="noopener noreferrer" aria-label="Instagram BPBPK Maluku" style="display:inline-flex;align-items:center;gap:10px;color:inherit;text-decoration:none">
+                <img src="images/instagram.png" alt="" style="width:18px;height:18px;display:block;flex-shrink:0" />
+                <span>Instagram</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </div>
   </footer>
+
+  <div class="goto-top" id="gotoTop" title="Kembali ke atas"><span>↑</span></div>
 
   <!-- Google Maps API -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBEZqcze-RGCcRGIBjyEt0-ID99TCDJeS0&callback=initMap" async defer></script>
@@ -191,7 +187,7 @@
   </script>
 
   <script>
-    /* Full script peta: geojson, markers, filters, admin layers, infoWindow */
+    /* Clean, corrected full map script */
     const RAW_GEOJSON = "https://raw.githubusercontent.com/bpbpkmaluku/Peta-Infrastruktur/main/data/DATA_SPASIAL.geojson";
     const ADMIN_PROV_URL = "data/maluku_prov.geojson";
     const ADMIN_KAB_URL  = "data/maluku_kabkota.geojson";
@@ -302,7 +298,7 @@
       geo.features.forEach(f=>{
         const p = normalizeProperties(f.properties || {});
         if(p.Sektor) uniqueSectors.add(String(p.Sektor).trim());
-        if(p.Tahun_Pembangunan && !isNaN(Number(p.Tahun_Pembangungan || p.Tahun_Pembangunan))) uniqueYears.add(String(p.Tahun_Pembangungan || p.Tahun_Pembangunan).trim());
+        if(p.Tahun_Pembangunan && !isNaN(Number(p.Tahun_Pembangunan))) uniqueYears.add(String(p.Tahun_Pembangunan).trim());
         if(p.Wilayah) uniqueRegions.add(String(p.Wilayah).trim());
       });
       document.getElementById('sectorFilter').innerHTML = '<option value="">Semua</option>' + Array.from(uniqueSectors).sort().map(s=>'<option>'+escapeHtml(s)+'</option>').join('');
